# spacereps

./: .gitignore  README.md  decks.json  main.py  package-lock.json  package.json  planning.txt  pyproject.toml  quizme.py  server.js  spacereps_cli.py
app/: deck.js  decks.html  decks.js  decks.json  index.html  index.js  package-lock.json  package.json  pyproject.toml  server.py  styles.css
frontend/: index.html
frontend/decks/: decks.js  index.html
frontend/decks/deck/: deck.js  index.html
frontend/static/js/: index.js
frontend/static/js/views/: Deck.js  Decks.js  Home.js  Study.js
server/: server.py
spacereps/: decks.json  main.py  planning.txt
spacereps/decks/: sample_deck.json
