[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["gladnicks <samgladnick@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-cors = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
